--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: rgb(0, 77, 128);
+  --main-color: rgb(4, 143, 80);
 }
 
 * {
@@ -17,7 +18,6 @@ body {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.6;
-  justify-content: space-between;
 }
 
 body,
@@ -25,6 +25,23 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+body {
+  justify-content: space-between;
+}
+
+#logo {
+  position: fixed;
+  inset: 0px;
+  background: url("/img/logo2.png") no-repeat 0svh 30svh / cover;
+  opacity: 0.5;
+}
+
+header,
+main,
+footer > p {
+  z-index: 1;
 }
 
 h1,
@@ -41,15 +58,75 @@ header {
   align-items: center;
   background-color: var(--main-color);
   width: 100%;
-  padding: 10px;
+  padding: 5px 10px;
   box-shadow: 0px 0px 6px 0px var(--main-color);
 }
 
-header a#route {
-  padding: 0px 10px;
-  background-color: orange;
-  color: rgb(255, 255, 255);
-  border-radius: 4px;
+header button {
+  width: max-content;
+  background-color: transparent;
+}
+
+header button svg {
+  transition: transform 0.3s ease-in-out;
+}
+
+header button:hover {
+  box-shadow: none;
+}
+
+header button:hover svg {
+  transform: scale(1.1);
+}
+
+header button svg {
+  fill: white;
+  width: 30px;
+}
+
+div.flashMessage {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  position: absolute;
+  top: 80px;
+  right: 5px;
+  max-height: 60%;
+  overflow-y: hidden;
+  z-index: 9;
+  padding: 5px;
+}
+
+div.flashMessage span {
+  --_show-time-msg: 0.3s;
+  --_time-msg: 5s;
+  --_color: green;
+
+  padding: 8px 10px;
+  background-color: var(--_color);
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px var(--_color);
+  opacity: 0;
+  position: relative;
+
+  animation: showMsg var(--_show-time-msg) ease-out forwards,
+    hideMsg 0.3s ease-in calc(var(--_time-msg) + var(--_show-time-msg)) forwards;
+}
+
+div.flashMessage span.error {
+  --_color: red;
+}
+
+div.flashMessage span::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(255, 217, 0);
+  animation: timeMsg var(--_time-msg) linear var(--_show-time-msg) forwards;
 }
 
 main {
@@ -75,4 +152,28 @@ button {
 a {
   text-decoration: none;
   color: white;
+}
+
+@media (min-aspect-ratio: 3/2) {
+  #logo {
+    background-position: 70vh -25vh;
+  }
+}
+
+@keyframes showMsg {
+  to {
+    opacity: 0.9;
+  }
+}
+
+@keyframes hideMsg {
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes timeMsg {
+  to {
+    width: 0px;
+  }
 }
