--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,9 +18,11 @@
     <title>GEOPPP</title>
   </head>
   <body>
+    <div id="logo"></div>
+    <div class="flashMessage"></div>
     <header>
       <h1><a href="/">GEOPPP</a></a></h1>
-      <a id="route" href="/{{redirect}}">{{label}}</a>
+      <button id="powerOff"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 224c0 17.7 14.3 32 32 32s32-14.3 32-32l0-224zM143.5 120.6c13.6-11.3 15.4-31.5 4.1-45.1s-31.5-15.4-45.1-4.1C49.7 115.4 16 181.8 16 256c0 132.5 107.5 240 240 240s240-107.5 240-240c0-74.2-33.8-140.6-86.6-184.6c-13.6-11.3-33.8-9.4-45.1 4.1s-9.4 33.8 4.1 45.1c38.9 32.3 63.5 81 63.5 135.4c0 97.2-78.8 176-176 176s-176-78.8-176-176c0-54.4 24.7-103.1 63.5-135.4z"/></svg></button>
     </header>
     <main>{{{body}}}</main>
     <footer>
@@ -28,10 +30,33 @@
     </footer>
   </body>
   <script src="/js/axios/dist/axios.min.js"></script>
+  <script type="importmap">
+    {
+      "imports": {
+        "socket.io-client": "https://cdn.socket.io/4.8.1/socket.io.esm.min.js"
+      }
+    }
+  </script>
+  
   <script>
-    const BACK_URL = "http://{{ip}}:3000"
+    const BACK_URL = "http://{{ip}}";
+    const messagesContainer = document.querySelector(".flashMessage");
+
+    const addMessage = (msg, error = false) => {
+      const span = document.createElement("span");
+      if(error) {
+        span.classList.add("error");
+      }
+
+      span.innerText = msg;
+
+      span.addEventListener("animationend", (e) => {
+        if(e.animationName === "hideMsg") span.remove()
+      })
+      messagesContainer.appendChild(span)
+    }
   </script>
   {{#if script}}
-    <script src="/js/{{script}}.js"></script>
+    <script src="/js/{{script}}.js" type="module"></script>
   {{/if}}
 </html>
